# FreshRoles

./: .gitignore  README.md  pyproject.toml  test_ollama.py
configs/companies/: airbnb.yaml  amazon.yaml  apple.yaml  cisco.yaml  cloudflare.yaml  coinbase.yaml  datadog.yaml  discord.yaml  doordash.yaml  dropbox.yaml  figma.yaml  google.yaml  instacart.yaml  jobsearch-interns.yaml  linear.yaml  mercury.yaml  meta.yaml  microsoft.yaml  notion.yaml  plaid.yaml  ramp.yaml  reddit.yaml  robinhood.yaml  spotify.yaml  stripe.yaml  twitch.yaml
configs/profiles/: example.yaml
freshroles/: __init__.py  __main__.py  cli.py  config.py
freshroles/adapters/: __init__.py  ashby.py  base.py  detector.py  generic.py  greenhouse.py  jobsearch.py  lever.py  linkedin.py  registry.py  smartrecruiters.py  workday.py
freshroles/discovery/: __init__.py  web_search.py
freshroles/http/: __init__.py  client.py
freshroles/matching/: __init__.py  dedup.py  keyword.py  resume.py  scorer.py  time_filter.py  vector_matcher.py
freshroles/matching/embeddings/: __init__.py  base.py  local.py  none.py  ollama.py  openai.py
freshroles/models/: __init__.py  company.py  enums.py  job.py
freshroles/notify/: __init__.py  ntfy.py
freshroles/storage/: __init__.py  database.py
tests/fixtures/: greenhouse_jobs.json  lever_jobs.json
tests/test_adapters/: test_greenhouse.py
tests/test_matching/: __init__.py  test_scorer.py
